Fix overflow guitar

--- a/style.css
+++ b/style.css
@@ -160,6 +160,7 @@ section {
 .about-section {
     padding: 70px 20px;
     position: relative;
+    overflow: hidden;
 }
 
 .about-section .svg {
